--- a/portal/templates/index.html
+++ b/portal/templates/index.html
@@ -1701,7 +1701,7 @@
                         <select id="categoryFilter" class="form-select">
                             <option value="">All Categories</option>
                             <option value="siem">SIEM (1 tool)</option>
-                            <option value="threat intel">Threat Intel (1 tool)</option>
+                            <option value="threat intel">Threat Intel (2 tools)</option>
                             <option value="network analysis">Network Analysis (2 tools)</option>
                             <option value="soar">SOAR (3 tools)</option>
                             <option value="endpoint management">Endpoint Management (1 tool)</option>
